[project]
name = "aqua-api"
version = "0.1.0"
description = "AQuA API — Bible translation quality assessment service"
requires-python = ">=3.11,<3.12"

# Runtime dependencies: what the deployed API actually needs. The DIRECT versions
# below are pinned to match the previous flat requirements.txt — no intentional
# upgrades here (the SQLAlchemy 2.0 migration and the wider version bumps are
# tracked separately in #734). Transitive dependencies are no longer pinned
# one-by-one: uv resolves and locks the full tree in uv.lock, so some indirect
# packages (e.g. aiohttp, cryptography, urllib3) land on newer versions than the
# old flattened pins — that fresh, locked resolution is what makes builds
# reproducible.
dependencies = [
    # --- Web framework / ASGI server ---
    "fastapi==0.115.6",
    "starlette==0.41.3",              # explicit pin carries the CVE fix (#774); also a fastapi transitive
    "uvicorn==0.17.6",
    "uvloop==0.19.0",                 # uvicorn event loop (auto-detected when installed)
    "httptools==0.6.1",               # uvicorn HTTP parser (auto-detected when installed)
    "websockets==12.0",               # uvicorn websockets protocol
    "watchgod==0.8.2",                # uvicorn --reload file watcher
    "python-multipart==0.0.18",       # FastAPI form/file uploads (used via the framework, not imported directly)
    # --- Data model / validation / settings ---
    "pydantic==2.4.2",
    "pydantic-settings==2.1.0",
    "email-validator==2.1.0",         # pydantic EmailStr support (used via the framework, not imported directly)
    # --- Database (async stack) ---
    "SQLAlchemy==1.4.36",
    "asyncpg==0.27.0",                # async Postgres driver (used via the DB URL, not imported directly)
    "alembic==1.12.1",
    "pgvector==0.2.0",
    # psycopg2-binary is imported only by the test suite today; the app and Alembic
    # both run fully async on asyncpg. It is kept in the runtime group out of caution
    # against any indirect sync-driver use — a follow-up can move it to the dev group
    # once confirmed unused in production.
    "psycopg2-binary==2.9.6",
    # --- Auth ---
    "python-jose[cryptography]==3.3.0",  # the [cryptography] extra preserves the JWT backend cryptography provides today
    "bcrypt==4.1.2",
    # --- ML / data ---
    "numpy==1.26.3",
    "pandas==2.1.4",
    "scipy==1.13.1",
    "scikit-learn==1.6.1",
    # --- External services / infra ---
    "modal==1.3.5",
    "python-dotenv==1.0.0",
    "python-json-logger==2.0.7",
    # observability-library's LokiHandler imports `requests` at runtime but
    # under-declares it (its metadata lists only aiohttp), so it must be pinned
    # here explicitly — otherwise enabling Loki (LOKI_ENABLED=true) would fail the
    # guarded import in utils/logging_config.py and silently fall back to console.
    "requests==2.31.0",
    # Loki logging handler (see [tool.uv.sources]). The import in
    # utils/logging_config.py is guarded; Loki shipping is off by default (LOKI_ENABLED).
    "observability-library",
]

[dependency-groups]
# Dev / test / tooling. Installed for local development and CI, but excluded from
# the production image via `uv sync --no-dev` (see the Dockerfile). This is the
# runtime/dev split issue #834 asks for: linting, tests, and the Jupyter/IPython
# stack (ipython, ipykernel, debugpy, matplotlib-inline, jupyter-*, …, pulled in
# transitively) no longer ship in the deployed API image.
dev = [
    # Linting / formatting
    "black==23.12.1",
    "flake8==7.0.0",
    "flake8-black==0.3.6",
    "isort==6.0.0",
    "pre-commit==4.2.0",
    # Tests
    "pytest==7.1.2",
    "pytest-asyncio==0.23.6",
    "pytest-dotenv==0.5.2",
    "httpx==0.26.0",                  # Starlette/FastAPI TestClient dependency (test-only)
    "aiofiles==23.2.1",               # used by test/test_bible_routes (test-only)
    # Notebooks / interactive shell (dev only)
    "ipython==8.21.0",
    "ipykernel==6.29.2",
]

[tool.uv]
# aqua-api is deployed as a plain source tree — the Dockerfile copies the modules
# onto PYTHONPATH rather than installing a wheel — so uv should manage only the
# dependencies, not build/install the project itself.
package = false

[tool.uv.sources]
# Public repo, installed from git (not published to PyPI).
observability-library = { git = "https://github.com/sil-ai/observability-library.git", tag = "v0.1.0" }
